<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

  <PreferenceCategory android:title="@string/original_category">
    <Preference android:title="@string/original_preference"/>
    <Preference
        android:title="@string/original_preference"
        android:summary="@string/original_summary"
        />
    <Preference
        android:title="@string/original_preference"
        android:summary="@string/original_summary_with_icon"
        android:icon="@mipmap/ic_launcher"
        android:dependency="@string/original_checkbox_key"
        />
    <CheckBoxPreference
        android:key="@string/original_checkbox_key"
        android:title="@string/original_checkbox_preference"
        android:summaryOn="@string/original_checkbox_summary_on"
        android:summaryOff="@string/original_checkbox_summary_off"
        android:disableDependentsState="true"
        />
    <SwitchPreference
        android:title="@string/original_switch_preference"
        android:summaryOn="@string/original_switch_preference_on"
        android:summaryOff="@string/original_switch_preference_off"
        />
  </PreferenceCategory>

  <com.github.shareme.gwsmaterialpreference.library.PreferenceCategory android:title="@string/material_category">
    <com.github.shareme.gwsmaterialpreference.library.Preference android:title="@string/material_preference"/>
    <com.github.shareme.gwsmaterialpreference.library.Preference
        android:title="@string/material_preference"
        android:summary="@string/material_summary"
        />
    <com.github.shareme.gwsmaterialpreference.library.Preference
        android:title="@string/material_preference"
        android:summary="@string/material_summary_with_icon"
        android:icon="@mipmap/ic_launcher"
        android:dependency="@string/material_checkbox_key"
        />
    <com.github.shareme.gwsmaterialpreference.library.CheckBoxPreference
        android:key="@string/material_checkbox_key"
        android:title="@string/material_checkbox_preference"
        android:summaryOn="@string/material_checkbox_summary_on"
        android:summaryOff="@string/material_checkbox_summary_off"
        android:disableDependentsState="true"
        />
    <com.github.shareme.gwsmaterialpreference.library.SwitchPreference
        android:title="@string/material_switch_preference"
        android:summaryOn="@string/material_switch_preference_on"
        android:summaryOff="@string/material_switch_preference_off"
        />
  </com.github.shareme.gwsmaterialpreference.library.PreferenceCategory>

</PreferenceScreen>